--- a/sfq/css/graduated.css
+++ b/sfq/css/graduated.css
@@ -1,39 +1,84 @@
 #Scontent{
 	width: 780px;
-	height: auto;
-	margin: 20px auto; 
+	margin: 0 auto;
 }
-.StitleBar{
-	
-	font-size: 18px;
+.conList{
+	margin: 0;
+	padding: 0;
+	width: 780px;
+	height: 140px;
+	margin-bottom: 20px;
+}
+.conTitle{
+	width: 100%;
+	height: 35px;
+	margin:0;
+	padding: 0;
+}
+.conTitle h4{
+	float: left;
+	width: 500px;
+	font-weight: normal;
+}
+.conTitle h4:hover{
+	color:#0076c9;
+	cursor: pointer;
+}
+.conTitle span{
+	float: right;
+	color: green;
+	width: 80px;
+	font-size: 14px;
+}
+.conCon{
+	float: right;
+	width: 730px;
+	margin-left: 50px;
+	text-indent: 2em;
+	color: #666;
+	font-size: 14px;
+	display: block;
+}
+.conMore{
+	float: right;
+	width: 65px;
+	height: 40px;
+	margin: 0;
+	padding: 0;
+	display: block;
+	color:#0076c9;
+	font-size: 15px;
+}
+
+.conMore:hover{
+	color: red;
+}
+.page{
+	width: 780px;
+	margin: 30px auto;
+	padding: 10px;
 	background: #54bfbc;
 }
-.StitleBar h2{
-	font-weight: normal;
-	height: 58px;
-	line-height: 58px;
-	text-align: center;
+.page ul{
+	width: 500px;
+	height: 30px;
+	margin: 10px auto 10px 200px;
+	cursor: pointer;
+	padding: 0;
 }
-.StimePeople{
-	width: 300px;
-	height: 40px;
-	font-size: 12px;
-	color: red;
-	margin: 12px auto;
-}
-.StimePeople .Stime{
+.page ul li{
 	float: left;
-
-}
-.StimePeople .Speople{
-	float: right;
-}
-.StextArea{
-	width: 780px;
-	margin: 50px 0;
-
-}
-.StextArea p{
-	text-indent: 2em;
+	width: 100px;
+	height: 30px;
 	line-height: 30px;
+	list-style-type: none;
+	font-weight: 600;
+}
+.page ul li:hover,visited{
+	color: #fff;
+}
+#pageTotal{
+	width: 100px;
+	font-size: 12px;
+	font-weight: 500;
 }
